// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Collection Horizontal render 1`] = `
<ul
  class="sc-bdnylx iSxgtw horizontal"
  data-testid="timeline-collection"
>
  <li
    class="sc-gtssRu QNAxy horizontal "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-ksluoS gXzCzs horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-kEqYlL issezT"
          title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
        >
          June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy horizontal "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-ksluoS gXzCzs horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-kEqYlL issezT"
          title="July 28, 1914"
        >
          July 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy horizontal "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-ksluoS gXzCzs horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-kEqYlL issezT"
          title="August 1–28, 1914"
        >
          August 1–28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy horizontal "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-ksluoS gXzCzs horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-kEqYlL issezT"
          title="September 6, 1914"
        >
          September 6, 1914
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Tree render 1`] = `
<ul
  class="sc-bdnylx iSxgtw tree"
  data-testid="timeline-collection"
>
  <li
    class="sc-gtssRu QNAxy tree "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy tree "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy tree "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy tree "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Vertical render 1`] = `
<ul
  class="sc-bdnylx iSxgtw vertical"
  data-testid="timeline-collection"
>
  <li
    class="sc-gtssRu QNAxy vertical "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-hBMVcZ kEgMpR vertical"
      >
        <div
          class="sc-ksluoS gXzCzs vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-kEqYlL issezT"
            title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
          >
            June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
          </div>
        </div>
        <div
          class="sc-dlnjPT hURYze"
        >
          <span
            class="sc-hKFyIo chbspV"
          >
            Archduke Franz Ferdinand of Austria and his wife, Sophie, are assassinated by a Bosnian Serb nationalist in Sarajevo.
          </span>
          <div
            class="sc-gKAblj kcnvpv show-less"
          />
          <span
            class="sc-iCoHVE dZriIx show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy vertical "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-hBMVcZ kEgMpR vertical"
      >
        <div
          class="sc-ksluoS gXzCzs vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-kEqYlL issezT"
            title="July 28, 1914"
          >
            July 28, 1914
          </div>
        </div>
        <div
          class="sc-dlnjPT hURYze"
        >
          <span
            class="sc-hKFyIo chbspV"
          >
            World War I begins when Austria-Hungary declares war on Serbia.
          </span>
          <div
            class="sc-gKAblj kcnvpv show-less"
          />
          <span
            class="sc-iCoHVE dZriIx show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy vertical "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-hBMVcZ kEgMpR vertical"
      >
        <div
          class="sc-ksluoS gXzCzs vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-kEqYlL issezT"
            title="August 1–28, 1914"
          >
            August 1–28, 1914
          </div>
        </div>
        <div
          class="sc-dlnjPT hURYze"
        >
          <span
            class="sc-hKFyIo chbspV"
          >
            Germany declares war on Russia, France, and Belgium. Britain declares war on Germany.
    Austria declares war on Russia. Montenegro declares war on Austria. France declares war on Austria.
    Britain declares war on Austria. Montenegro declares war on Germany. Japan declares war on Germany. Austria declares war on Belgium.
          </span>
          <div
            class="sc-gKAblj kcnvpv show-less"
          />
          <span
            class="sc-iCoHVE dZriIx show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-gtssRu QNAxy vertical "
    width="250"
  >
    <div
      class="sc-iqAbSa LvJIG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-dIsAE biHERP"
      >
        <div
          class="sc-bqGHjH bjgoZi vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-hBMVcZ kEgMpR vertical"
      >
        <div
          class="sc-ksluoS gXzCzs vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-kEqYlL issezT"
            title="September 6, 1914"
          >
            September 6, 1914
          </div>
        </div>
        <div
          class="sc-dlnjPT hURYze"
        >
          <span
            class="sc-hKFyIo chbspV"
          >
            First Battle of the Marne begins. The Germans had advanced to within 30 miles of Paris, but over the next two days, the French are reinforced by 6,000 infantrymen who are transported to the front by hundreds of taxis.
      The Germans dig in north of the Aisne River, and the trench warfare that is to typify the Western Front for the next four years begins.
          </span>
          <div
            class="sc-gKAblj kcnvpv show-less"
          />
          <span
            class="sc-iCoHVE dZriIx show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
